--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ publishDir = "docs"
     name = "Masahiro Endo"
     description = "フリーランスのWebエンジニアとして活動しています"
     year = 2018
-    avatar = "images/guy.jpg"
+    avatar = "images/prof_head.jpg"
     background = ""
     favicon = "images/favicon.png"
     DateForm = "January 2, 2006"
